AGRE-3256: Showing information message for visit date outside window
