# api/src/main/java/org/openmrs/module/visits/api/mapper/VisitMapper.java
@@ -10,9 +10,16 @@
 
 package org.openmrs.module.visits.api.mapper;
 
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Date;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 import org.openmrs.Visit;
+import org.openmrs.VisitAttribute;
 import org.openmrs.api.LocationService;
 import org.openmrs.api.PatientService;
 import org.openmrs.api.VisitService;
@@ -23,11 +30,6 @@ import org.openmrs.module.visits.api.dto.VisitDateDTO;
 import org.openmrs.module.visits.api.dto.VisitDetailsDTO;
 import org.openmrs.module.visits.api.exception.ValidationException;
 import org.openmrs.module.visits.api.service.ConfigService;
-
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.Date;
-import java.util.List;
 
 /** Maps objects between the related visit types */
 public class VisitMapper extends AbstractMapper<VisitDTO, Visit> {
@@ -97,7 +99,8 @@ public class VisitMapper extends AbstractMapper<VisitDTO, Visit> {
     return new VisitDetailsDTO(
         toDto(visit),
         visit.getLocation() == null ? null : visit.getLocation().getName(),
-        visit.getVisitType() == null ? null : visit.getVisitType().getName());
+        visit.getVisitType() == null ? null : visit.getVisitType().getName(),
+        createVisitAttributesMap(visit));
   }
 
   public List<VisitDetailsDTO> toDtosWithDetails(Collection<Visit> visits) {
@@ -107,6 +110,16 @@ public class VisitMapper extends AbstractMapper<VisitDTO, Visit> {
     }
 
     return dtos;
+  }
+
+  private Map<String, String> createVisitAttributesMap(Visit visit) {
+    List<VisitAttribute> visitAttributes = new ArrayList<>(visit.getActiveAttributes());
+    Map<String, String> visitAttributesMap = new HashMap<>();
+    for (VisitAttribute attribute : visitAttributes) {
+      visitAttributesMap.put(attribute.getAttributeType().getName(), attribute.getValueReference());
+    }
+    
+    return visitAttributesMap;
   }
 
   public void setVisitService(VisitService visitService) {
